<resources>
    <string name="app_name">DSMProyectoCatedraAC180847MM200149MH192214GC180313</string>

    <!-- Sección de Login y Register -->
    <string name="Btn_Login">Iniciar sesión</string>
    <string name="Btn_Registro">Registrarse</string>
    <string name="autor1">Emmanuel Antonio Girón Cornejo GC180313</string>
    <string name="autor2">Adilson Arian Montes Martinez MM200149</string>

    <string name="CrearCuentaTXT">Crear Cuenta</string>
    <string name="Nombres">Ingrese su nombre</string>
    <string name="Correo">Ingrese su correo</string>
    <string name="Pass">Ingrese su contraseña</string>
    <string name="ConfirmarContra">Ingrese de nuevo su contraseña</string>
    <string name="RegistrarUser">Registrar</string>
    <string name="Regresar">Regresar</string>
    <string name="TengoUnaCuenta">Posee una cuenta?</string>

    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="CorreoLog">Ingrese su Correo</string>
    <string name="PassLog">Ingrese su Contraseña</string>
    <string name="Btn_LogIn">Ingresar</string>
    <string name="Register">No tienes una cuenta? Registrate</string>

    <string name="users_login">Correo</string>
    <string name="users_password">Contraseña</string>
    <string name="forget_password">¿Has olvidado tu contraseña?</string>
    <string name="Dont_have_account">¿No tienes una cuenta?</string>
    <string name="register">Registrate</string>
    <string name="start">¡Empecemos!</string>
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="button_create">CREAR</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="here">Entre aqui</string>
    <string name="back_button_description">Volver atrás</string>


</resources>