<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".Registro.Login"
    android:background="@color/backGround">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/brain"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="475dp"
        android:background="@drawable/rounded_edge"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/users_login"
            android:textColor="@color/black" />


            <EditText
                android:id="@+id/CorreoLog"
                android:hint="@string/CorreoLog"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@android:color/black"
                android:drawableRight="@drawable/baseline_account_circle_24"
                android:ems="10"
                android:text=""
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/users_password"
            android:textColor="@color/black" />

            <EditText
                android:id="@+id/PassLog"
                android:hint="@string/PassLog"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@android:color/black"
                android:drawableRight="@drawable/padlock_svgrepo_com"
                android:ems="10"
                android:textColor="@android:color/black"
                android:inputType="textPassword"/>

        <Button
            android:id="@+id/Btn_IniciarSesion"
            android:text="@string/Btn_LogIn"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:backgroundTint="#2A11DB"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/Dont_have_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/backGround"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>